--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -1,21 +1,21 @@
 .profile {
-    flex-basis: 0;
-    flex-grow: 1;
-    height: 100%;
-    background-color: white;
+  flex-basis: 0;
+  flex-grow: 1;
+  height: 100%;
+  background-color: white;
 }
 
 .profile_top {
-    height: 50vh;
+  height: 50vh;
 }
 
 .profile_top_top {
-    height: 50%;
+  height: 50%;
 }
 
 .profile_background_img {
-    height: 100%;
-    background-color: #CFD9DE;
+  height: 100%;
+  background-color: #cfd9de;
 }
 
 .profile_background_img > img {
@@ -25,132 +25,153 @@
 }
 
 .profile_img_wrapper1 {
-    position: relative;
-    height: 100%;
+  position: relative;
+  height: 100%;
 }
 
 .profile_img_wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 16vh;
-    width: 16vh;
-    position: absolute;
-    z-index: 0;
-    top:17vh;
-    margin-left: 2vh;
-    background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 16vh;
+  width: 16vh;
+  position: absolute;
+  z-index: 0;
+  top: 17vh;
+  margin-left: 2vh;
+  background-color: transparent;
 }
 
 .profile_img_circle {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 90%;
-    height: 90%;
-    background-color: #CFD9DE;
-    border-radius: 50%;
-    border: 4px solid white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 90%;
+  height: 90%;
+  background-color: #cfd9de;
+  border-radius: 50%;
+  border: 4px solid white;
 }
 
 .profile_img_circle > img {
-    width: 14.6vh;
-    height: 14.6vh;
-    border-radius: 50%;
-    object-fit: cover;
+  width: 14.6vh;
+  height: 14.6vh;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
 .profile_top_bottom {
-    height: 50%;
-    display: flex;
-    flex-direction: column;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
 }
 
 .profile_edit_wrapper {
-    display: flex;
-    height: 35%;
-    justify-content: flex-end;
+  display: flex;
+  height: 35%;
+  justify-content: flex-end;
 }
 
 .profile_edit {
-    display: flex;
-    width: 35%;
-    align-items: center;
-    justify-content: flex-end;
+  display: flex;
+  width: 35%;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 .profile_edit > span {
-    padding: 1vh;
-    width: 50%;
-    border: 1px solid #d1d1d1;
-    border-radius: 2vh;
-    font-size: 1.7vh;
-    font-weight: 600;
-    color: rgb(29, 29, 29);
-    text-align: center;
-    margin-right: 1vh;
-    cursor: pointer;
+  padding: 1vh;
+  width: 50%;
+  border: 1px solid #d1d1d1;
+  border-radius: 2vh;
+  font-size: 1.7vh;
+  font-weight: 600;
+  color: rgb(29, 29, 29);
+  text-align: center;
+  margin-right: 1vh;
+  cursor: pointer;
 }
 
 .profile_edit > span:hover {
   background-color: #f0efef;
 }
 
-.profile_info_name, .profile_info_state, .profile_info_creationtime {
-    display: flex;
-    align-items: center;
+.profile_info_name,
+.profile_info_state,
+.profile_info_creationtime {
+  display: flex;
+  align-items: center;
+}
+
+.profile_info_following_wrapper {
+  display: flex;
+  height: 15%;
+  align-items: center;
+  margin-left: 1.5vh;
+}
+
+.profile_info_follow_number {
+  color: black;
+  font-weight: bold;
+  margin-right: 0.3vh;
+}
+
+.profile_info_follow {
+  margin-right: 1.5vh;
 }
 
 .profile_info_name {
-    height: 15%;
-    font-weight: 600;
-    font-size: 1.9vh;
+  height: 15%;
+  font-weight: 600;
+  font-size: 1.9vh;
 }
 
 .profile_info_state {
-    height: 15%;
+  height: 15%;
 }
 
 .profile_info_creationtime {
-    height: 15%;
-    color: rgb(93, 93, 93);
+  height: 15%;
+  color: rgb(93, 93, 93);
 }
 
 .profile_menu_bar {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex: 1;
-    cursor: pointer;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex: 1;
+  cursor: pointer;
 }
 
 .profile_menu_bar > span {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    width: 50%;
-    position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 50%;
+  position: relative;
 }
 
 .click_on {
-  border-bottom:3px solid #00acee;
+  border-bottom: 3px solid #00acee;
   margin-bottom: -3px;
 }
 
 .click_off {
-  border:none;
+  border: none;
   margin-bottom: none;
 }
 
 .profile_menu_bar > span:hover {
-    background-color: rgb(223, 223, 223);
+  background-color: rgb(223, 223, 223);
 }
 
 .profile_bottom {
-    height: 50vh;
+  height: 50vh;
 }
 
-.profile_info_name > span, .profile_info_state > span, .profile_info_creationtime > span {
-    margin-left: 1.5vh;
+.profile_info_name > span,
+.profile_info_state > span,
+.profile_info_creationtime > span {
+  margin-left: 1.5vh;
 }
