--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -13,15 +13,16 @@
   height: 50%;
 }
 
-.profile_background_img {
+.profile_background_img_wrapper {
   height: 100%;
   background-color: #cfd9de;
 }
 
-.profile_background_img > img {
+.profile_background_img {
   height: 100%;
   width: 100%;
   object-fit: cover;
+  cursor: pointer;
 }
 
 .profile_img_wrapper1 {
@@ -53,17 +54,19 @@
   border: 4px solid white;
 }
 
-.profile_img_circle > img {
+.profile_image {
   width: 14.6vh;
   height: 14.6vh;
   border-radius: 50%;
   object-fit: cover;
+  cursor: pointer;
 }
 
 .profile_top_bottom {
   height: 50%;
   display: flex;
   flex-direction: column;
+  border-bottom: 1px solid #eff3f4;
 }
 
 .profile_edit_wrapper {
@@ -181,6 +184,7 @@
 }
 
 .click_on {
+  box-sizing: border-box;
   border-bottom: 3px solid #00acee;
   margin-bottom: -3px;
 }
