--- a/src/components/Nweets/NweetFactory.css
+++ b/src/components/Nweets/NweetFactory.css
@@ -48,11 +48,13 @@
 }
 
 .nweet_factory_attachmentImg {
-  width: 55vh;
+  width: 100%;
   height: 32vh;
 }
 
 .nweet_factory_attachmentImg > img {
+  border: 0.5px solid #eff3f4;
+  border-radius: 15px;
   width: 100%;
   height: 100%;
   object-fit: cover;
