--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -67,6 +67,7 @@
   display: flex;
   flex-direction: column;
   border-bottom: 1px solid #eff3f4;
+  justify-content: space-between;
 }
 
 .profile_edit_wrapper {
@@ -157,10 +158,6 @@
   font-size: 1.9vh;
 }
 
-.profile_info_state {
-  height: 15%;
-}
-
 .profile_info_creationtime {
   height: 15%;
   color: rgb(93, 93, 93);
@@ -170,7 +167,7 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  flex: 1;
+  flex: 0.7;
   cursor: pointer;
 }
 
