--- a/src/components/Nweets/NweetForm.css
+++ b/src/components/Nweets/NweetForm.css
@@ -2,6 +2,18 @@
   border-bottom: 1px solid #eff3f4;
 }
 
+.nweet_renweet {
+  font-size: 1.5vh;
+  color: #525252;
+  font-weight: bold;
+}
+
+.nweet_renweet > span {
+  display: inline-block;
+  padding-left: 4.5vw;
+  padding-top: 1vh;
+}
+
 .nweet {
   padding: 1.5vh 1.5vh 1.5vh 1.5vh;
   display: flex;
