--- a/src/components/Nweets/NweetForm.css
+++ b/src/components/Nweets/NweetForm.css
@@ -103,16 +103,27 @@
 
 .nweet_drop_down {
   display: flex;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
+  z-index: 4;
   position: absolute;
-  background-color: rgb(107, 175, 30);
-  color: white;
-  width: 18vh;
-  height: 8vh;
-  right: 0vh;
-  z-index: 10;
+  width: 25vh;
+  height: 10vh;
+  right: 0;
+  background-color: white;
+  box-shadow: 0 0 0.5vh 0.1vh rgba(128, 128, 128, 0.37);
+  border-radius: 0.5vh;
+  animation-duration: 0.1s;
+  animation-name: slideTopToBot2;
+}
+
+@keyframes slideTopToBot2 {
+  from {
+    height: 5vh;
+  }
+
+  to {
+    height: 10vh;
+  }
 }
 
 .nweet_drop_menu {
@@ -126,7 +137,7 @@
 }
 
 .nweet_drop_menu:hover {
-  background-color: rgb(82, 114, 255);
+  background-color: #f3f3f3;
 }
 
 .nweet_right_bottom {
