--- a/src/components/Detail/DetailNweet.css
+++ b/src/components/Detail/DetailNweet.css
@@ -13,6 +13,11 @@
   flex-direction: column;
   justify-content: center;
   padding-left: 1.5vh;
+  cursor: pointer;
+}
+
+.detail_nweet_userInfo:hover .detail_nweet_nick {
+  text-decoration: underline;
 }
 
 .detail_nweet_nick {
@@ -49,6 +54,7 @@
 }
 
 .detail_nweet_text {
+  white-space: pre-line;
   font-size: 2.5vh;
 }
 
