--- a/src/components/Nweets/NweetForm.css
+++ b/src/components/Nweets/NweetForm.css
@@ -172,7 +172,7 @@
 
 .nweet_right_bottom_like,
 .nweet_right_bottom_reNweet,
-.nweet_right_bottom_follow {
+.nweet_right_bottom_comment {
   cursor: pointer;
   display: flex;
 }
@@ -184,6 +184,12 @@
 
 .nweet_right_bottom_like:hover > svg {
   background-color: #f8e0eb;
+  fill: #f91880;
+}
+
+.nweet_right_bottom_comment:hover > svg {
+  background-color: #e1eef7;
+  fill: #1d9bf0;
 }
 
 .liked {
@@ -192,19 +198,22 @@
 }
 
 .unliked,
-.nweet_right_bottom_reNweet > svg {
+.nweet_right_bottom_reNweet > svg,
+.nweet_right_bottom_comment > svg {
   width: 2vh;
   fill: #536471;
 }
 
 .nweet_right_bottom_like > svg,
-.nweet_right_bottom_reNweet > svg {
+.nweet_right_bottom_reNweet > svg,
+.nweet_right_bottom_comment > svg {
   padding: 0.7vh 0.7vh 0.7vh 0.7vh;
   border-radius: 50%;
 }
 
 .nweet_right_bottom_like > span,
-.nweet_right_bottom_reNweet > span {
+.nweet_right_bottom_reNweet > span,
+.nweet_right_bottom_comment > span {
   padding-top: 0.7vh;
   color: #536471;
   font-size: 1.5vh;
