--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -6,11 +6,11 @@
 }
 
 .profile_top {
-  height: 50vh;
+  height: 45%;
 }
 
 .profile_top_top {
-  height: 50%;
+  height: 55%;
 }
 
 .profile_background_img_wrapper {
@@ -63,16 +63,14 @@
 }
 
 .profile_top_bottom {
-  height: 50%;
   display: flex;
   flex-direction: column;
-  border-bottom: 1px solid #eff3f4;
-  justify-content: space-between;
 }
 
 .profile_edit_wrapper {
+  padding-top: 1.5vh;
+  padding-bottom: 2vh;
   display: flex;
-  height: 35%;
   justify-content: flex-end;
 }
 
@@ -128,18 +126,27 @@
   background-color: #f0efef;
 }
 
-.profile_info_name,
 .profile_info_state,
-.profile_info_creationtime {
-  display: flex;
-  align-items: center;
-}
-
 .profile_info_following_wrapper {
   display: flex;
-  height: 15%;
   align-items: center;
-  margin-left: 1.5vh;
+  padding-top: 1.5vh;
+}
+
+.profile_info_name {
+  display: flex;
+  flex-direction: column;
+}
+
+.profile_info_nickname {
+  font-weight: 600;
+  font-size: 1.9vh;
+}
+
+.profile_info_id {
+  padding-top: 0.5vh;
+  color: #566773;
+  font-size: 1.6vh;
 }
 
 .profile_info_follow_number {
@@ -153,9 +160,7 @@
 }
 
 .profile_info_name {
-  height: 15%;
-  font-weight: 600;
-  font-size: 1.9vh;
+  padding-top: 1.5vh;
 }
 
 .profile_info_creationtime {
@@ -168,7 +173,9 @@
   justify-content: space-evenly;
   align-items: center;
   flex: 0.7;
+  height: 10%;
   cursor: pointer;
+  border-bottom: 1px solid #eff3f4;
 }
 
 .profile_menu_bar > span {
@@ -196,11 +203,11 @@
 }
 
 .profile_bottom {
-  height: 50vh;
+  height: 55%;
 }
 
 .profile_info_name > span,
 .profile_info_state > span,
-.profile_info_creationtime > span {
+.profile_info_following_wrapper {
   margin-left: 1.5vh;
 }
