--- a/src/components/Detail/DetailNweet.css
+++ b/src/components/Detail/DetailNweet.css
@@ -105,15 +105,22 @@
   cursor: pointer;
   font-weight: bold;
 }
-
 .detail_nweet_liked_text {
   cursor: pointer;
   color: #536487;
 }
 
+.detail > svg {
+  width: 2.5vh;
+}
+
+.detail_nweet_like_wrapper {
+  cursor: pointer;
+}
+
 .detail_nweet_btns {
   display: flex;
   justify-content: space-evenly;
-  padding: 1vh 0 1vh 0;
+  padding: 0.5vh 0 0.5vh 0;
   border-bottom: 1px solid #eff3f4;
 }
