--- a/src/routes/FirstScreen.css
+++ b/src/routes/FirstScreen.css
@@ -1,162 +1,171 @@
-.modal_wrapper {
-    position: fixed;
-    top:0; left: 0; bottom: 0; right: 0;
-    background: rgba(0, 0, 0, 0.8);
+.main_modal_wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.8);
 }
 
-.modal {
-    display: flex;
-    width: 45vh;
-    height: 58vh;
-    background-color: teal;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    -o-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+.main_modal {
+  display: flex;
+  width: 45vh;
+  height: 58vh;
+  background-color: teal;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 .main_wrapper_1 {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 45%;
-    background-color: white;
-    padding-left: 4vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 45%;
+  background-color: white;
+  padding-left: 4vh;
 }
 
 .main_top {
-    display: flex;
-    height: 95%;
+  display: flex;
+  height: 95%;
 }
 
 .birdImg {
-    width: 42vh;
-    height: 42vh;
-    fill: rgb(255, 255, 255);
+  width: 42vh;
+  height: 42vh;
+  fill: rgb(255, 255, 255);
 }
 
 .birdImg2 {
-    fill: #00acee;
-    width: 5vh;
-    height: 5vh;
+  fill: #00acee;
+  width: 5vh;
+  height: 5vh;
 }
 
 .birdImg2_wrapper {
-    padding-bottom: 8vh;
+  padding-bottom: 8vh;
 }
 
-
 .main_text_wrapper {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .main_text_wrapper span:first-child {
-    font-size: 6.8vh;
-    font-weight: 600;
-    margin-bottom: 6vh;
+  font-size: 6.8vh;
+  font-weight: 600;
+  margin-bottom: 6vh;
 }
 
 .main_text_wrapper span:last-child {
-    font-size: 2.8vh;
-    font-weight: 600;
-    margin-bottom: 4vh;
+  font-size: 2.8vh;
+  font-weight: 600;
+  margin-bottom: 4vh;
 }
 
 .main_regist_text {
-    padding-top: 0.3vh;
-    font-size: 1.7vh;
+  padding-top: 0.3vh;
+  font-size: 1.7vh;
 }
 
 .sign_up {
-    color:#00acee;
-    cursor: pointer;
+  color: #00acee;
+  cursor: pointer;
 }
 
 .main_bottom {
-    height: 5%;
+  height: 5%;
 }
 
 .login_form_wrapper {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .login_form {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
-.login_form_id, .login_form_password, .login_form_submit {
-    background-color:  transparent;
-    width: 37vh;
-    height: 5vh;
-    border-radius: 15vh;
-    border: none;
-    margin-bottom: 2vh;
-    background-color: rgb(211, 211, 211);
-    text-align: center;
+.login_form_id,
+.login_form_password,
+.login_form_submit {
+  background-color: transparent;
+  width: 37vh;
+  height: 5vh;
+  border-radius: 15vh;
+  border: none;
+  margin-bottom: 2vh;
+  background-color: rgb(211, 211, 211);
+  text-align: center;
 }
 
-.login_form_id:focus, .login_form_password:focus {
-    border: none;
-    outline: none;
-    background-color: rgb(211, 211, 211);
+.login_form_id:focus,
+.login_form_password:focus {
+  border: none;
+  outline: none;
+  background-color: rgb(211, 211, 211);
 }
 
-.login_form_id:focus::-webkit-input-placeholder, .login_form_password:focus::-webkit-input-placeholder {
-    color: transparent;
+.login_form_id:focus::-webkit-input-placeholder,
+.login_form_password:focus::-webkit-input-placeholder {
+  color: transparent;
 }
 
-input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:focus, input:-webkit-autofill:active {
-    transition: background-color 5000s ease-in-out 0s;
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  transition: background-color 5000s ease-in-out 0s;
 }
 
 .social_links {
-    display: flex;
+  display: flex;
 }
 
 .social_links > button {
-    width: 18.5vh;
-    height: 5vh;
-    border: none;
-    margin-bottom: 2vh;
-    color: white;
+  width: 18.5vh;
+  height: 5vh;
+  border: none;
+  margin-bottom: 2vh;
+  color: white;
 }
 
 .social_links > button:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .social_links button:first-child {
-    border-top-left-radius: 7.5vh;
-    border-bottom-left-radius: 7.5vh;
-    background-color: rgb(77, 133, 255);
+  border-top-left-radius: 7.5vh;
+  border-bottom-left-radius: 7.5vh;
+  background-color: rgb(77, 133, 255);
 }
 
 .social_links button:last-child {
-    border-top-right-radius: 7.5vh;
-    border-bottom-right-radius: 7.5vh;
-    background-color: rgba(0, 0, 0, 0.65);
+  border-top-right-radius: 7.5vh;
+  border-bottom-right-radius: 7.5vh;
+  background-color: rgba(0, 0, 0, 0.65);
 }
 
 .footer {
-    height: 100%;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    font-size: 1.4vh;
-    word-spacing: 1vh;
-    color: rgb(77, 77, 77);
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  font-size: 1.4vh;
+  word-spacing: 1vh;
+  color: rgb(77, 77, 77);
 }
